Fixed faqs overflow and icons in IE

--- a/sass/components/_faqs.scss
+++ b/sass/components/_faqs.scss
@@ -1,6 +1,7 @@
 .faqs {
 	position: relative;
 	margin-bottom: $base-unit*5;
+	overflow: hidden;
 }
 
 .faqs__item {
